--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = nest_asyncio
-version = 1.5.1
+version = 1.5.4
 author = Ewald R. de Wit
 author_email = ewald.de.wit@gmail.com
 license = BSD
@@ -19,7 +19,9 @@ classifiers =
 	Programming Language :: Python :: 3.7
 	Programming Language :: Python :: 3.8
 	Programming Language :: Python :: 3.9
+	Programming Language :: Python :: 3.10
 	Programming Language :: Python :: 3 :: Only
+	Framework :: AsyncIO
 
 [options]
 py_modules = nest_asyncio
